@@ -4,9 +4,9 @@ public class CourseAnalytics {
     private final String courseId;
     private final List<StudentCoursePerformanceAnalytics> studentPerformances;
     private double courseCompletionRate;
-    private Map<String, Double> lessonAverageScoresPercentages; // lessonId -> average score percentage
-    private Map<String, Double> lessonCompletionRate; // lessonId -> completion rate
-    private Map<String, Double> lessonQuizAttemptRate; // lessonId -> quiz attempt rate
+    private Map<String, Double> lessonAverageScoresPercentages = new HashMap<>(); // lessonId -> average score percentage
+    private Map<String, Double> lessonCompletionRate = new HashMap<>(); // lessonId -> completion rate
+    private Map<String, Double> lessonQuizAttemptRate = new HashMap<>(); // lessonId -> quiz attempt rate
 
     // Constructor - takes only final fields, other fields will be calculated
     public CourseAnalytics(String courseId, List<StudentCoursePerformanceAnalytics> studentPerformances) {
@@ -29,7 +29,7 @@ public class CourseAnalytics {
         }
 
         int studentsCompletedCourse = 0;
-        int totalLessons = studentPerformances.getFirst().getLessonsResultsHistory().size();
+        int totalLessons = studentPerformances.get(0).getLessonsResultsHistory().size();
         for (StudentCoursePerformanceAnalytics performance : studentPerformances) {
             studentsCompletedCourse = performance.getCompletedLessonsCount();
             if(studentsCompletedCourse == totalLessons) {
@@ -46,7 +46,7 @@ public class CourseAnalytics {
             return;
         }
 
-        Set<String> lessonIds= this.studentPerformances.getFirst().getLessonsResultsHistory().keySet();
+        Set<String> lessonIds= this.studentPerformances.get(0).getLessonsResultsHistory().keySet();
         for (String lessonId : lessonIds) {
             int studentsCompletedCurrentLesson = 0;
             for (StudentCoursePerformanceAnalytics performance : studentPerformances) {
@@ -65,7 +65,7 @@ public class CourseAnalytics {
             return;
         }
 
-        Set<String> lessonIds= this.studentPerformances.getFirst().getLessonsResultsHistory().keySet();
+        Set<String> lessonIds= this.studentPerformances.get(0).getLessonsResultsHistory().keySet();
         for (String lessonId : lessonIds) {
             int totalAttemptsPerLesson = 0;
             for (StudentCoursePerformanceAnalytics performance : studentPerformances) {
@@ -84,7 +84,7 @@ public class CourseAnalytics {
             return;
         }
 
-        Set<String> lessonIds= this.studentPerformances.getFirst().getLessonsResultsHistory().keySet();
+        Set<String> lessonIds= this.studentPerformances.get(0).getLessonsResultsHistory().keySet();
         for (String lessonId : lessonIds) {
             double lessonTotalScoresPercentages = 0.0;
             for (StudentCoursePerformanceAnalytics performance : studentPerformances) {
@@ -103,6 +103,13 @@ public class CourseAnalytics {
 
     public List<StudentCoursePerformanceAnalytics> getStudentPerformances() {
         return studentPerformances;
+    }
+
+    public List<String> getLessonIds() {
+        if (studentPerformances.isEmpty()) {
+            return new ArrayList<>();
+        }
+        return new ArrayList<String>(lessonAverageScoresPercentages.keySet());
     }
 
     public double getCourseCompletionRate() {
